<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_clickable"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_dashboard_field_padding"
    android:paddingTop="@dimen/activity_dashboard_field_padding"
    android:paddingEnd="@dimen/activity_dashboard_field_padding"
    android:paddingBottom="@dimen/activity_dashboard_field_padding"
    android:tag="h320">

    <TextView
        android:id="@+id/txSubcriptionDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#fff"
        android:text="@string/activity_dashboard_fragment_subscription_title_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txSubcriptionStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/activity_dashboard_fragment_subscription_date_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />

            <TextView
                android:id="@+id/txSubcriptionStartHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/activity_dashboard_fragment_subscription_hour_default" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="#fff"
            android:text="-"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txSubcriptionEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:text="@string/activity_dashboard_fragment_subscription_date_default"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" " />

            <TextView
                android:id="@+id/txSubcriptionEndHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/activity_dashboard_fragment_subscription_hour_default" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgSubcription"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:progress="40"
        android:scaleY="1.5"
        android:visibility="gone" />

</LinearLayout>